Dockerize the project + New enviroment variable